--- a/src/app/stu-add-edit/stu-add-edit.component.html
+++ b/src/app/stu-add-edit/stu-add-edit.component.html
@@ -10,7 +10,7 @@
       <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
         <input
-          formControlName="firsName"
+          formControlName="firstName"
           matInput
           type="text"
           placeholder="Ex. Tecnical"
@@ -18,7 +18,7 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Last Name</mat-label>
-        <input formControlName="lastname" matInput placeholder="Ex. Bro" />
+        <input formControlName="lastName" matInput placeholder="Ex. Bro" />
       </mat-form-field>
     </div>
 
