--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,7 +83,11 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
         <td mat-cell *matCellDef="let row">
-          <button mat-icon-button color="primary">
+          <button
+            (click)="openEditStuForm(row)"
+            mat-icon-button
+            color="primary"
+          >
             <mat-icon>edit</mat-icon>
           </button>
           <button (click)="deleteStudent(row.id)" mat-icon-button color="warn">
