--- a/src/app/stu-add-edit/stu-add-edit.component.html
+++ b/src/app/stu-add-edit/stu-add-edit.component.html
@@ -14,11 +14,17 @@
           matInput
           type="text"
           placeholder="Ex. Tecnical"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Last Name</mat-label>
-        <input formControlName="lastName" matInput placeholder="Ex. Bro" />
+        <input
+          formControlName="lastName"
+          matInput
+          placeholder="Ex. Bro"
+          required
+        />
       </mat-form-field>
     </div>
 
@@ -30,11 +36,17 @@
           matInput
           type="text"
           placeholder="Ex. email@gmail.com"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Date of birth</mat-label>
-        <input formControlName="dob" matInput [matDatepicker]="picker" />
+        <input
+          formControlName="dob"
+          matInput
+          [matDatepicker]="picker"
+          required
+        />
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
@@ -45,7 +57,11 @@
     </div>
 
     <div class="row">
-      <mat-radio-group formControlName="gender" aria-label="Select an option">
+      <mat-radio-group
+        formControlName="gender"
+        aria-label="Select an option"
+        required
+      >
         <mat-label><b>Gender</b></mat-label>
         <mat-radio-button value="male">Male</mat-radio-button>
         <mat-radio-button value="female">Female</mat-radio-button>
@@ -56,7 +72,7 @@
     <div class="row">
       <mat-form-field appearance="outline">
         <mat-label>Education</mat-label>
-        <mat-select formControlName="education">
+        <mat-select formControlName="education" required>
           <mat-option *ngFor="let val of education" [value]="val">
             {{ val }}</mat-option
           >
@@ -64,7 +80,12 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Address</mat-label>
-        <input formControlName="address" matInput placeholder="Ex. HaNoi" />
+        <input
+          formControlName="address"
+          matInput
+          placeholder="Ex. HaNoi"
+          required
+        />
       </mat-form-field>
     </div>
 
@@ -76,6 +97,7 @@
           type="number"
           matInput
           placeholder="Ex. 4"
+          required
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
@@ -85,6 +107,7 @@
           type="number"
           matInput
           placeholder="Ex. 12"
+          required
         />
         <mat-hint>In VND</mat-hint>
       </mat-form-field>
@@ -93,7 +116,11 @@
 
   <!-- form action -->
   <div class="action" mat-dialog-actions>
-    <button mat-raised-button>Cancel</button>
-    <button mat-raised-button color="primary" type="submit">Save</button>
+    <button mat-raised-button type="button" [mat-dialog-close]="false">
+      Cancel
+    </button>
+    <button mat-raised-button color="primary" type="submit">
+      {{ data ? "Update" : "Save" }}
+    </button>
   </div>
 </form>
